--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "wasm_game"
 version = "0.1.0"
 edition = "2021"
+authors = ["Esteban Ibarra <sectorjeat@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = "0.11.2"
